2009-04-18 John Wu <John.Wu at ACM.org>
	* configure.ac: actually try to compile src/whereLexer.cc to
	determine whether to use win/FlexLexer.h or not

2009-04-17 John Wu <John.Wu at ACM.org>
	* src/table.h, src/tab.h, src/bord.h, src/join.h, src/joinin.h:
	change the return value type from point to reference to reduce the
	need to check the validity of the pointers (existing code did not
	check them anyway)
	* src/bord.cpp, src/mensa.cpp: in getColumnAsString move statement
	copying oss.str() to individual cases, previously this was done at
	the end, which causes all string values to returned as empty string

2009-04-16 John Wu <John.Wu at ACM.org>
	* src/fileManager.cpp:670 need to multiply page size to
	pi.PhysicalTotal to get bytes
	* src/tafel.cpp, src/tafel.h: add masks to functions locate,
	locateString, append, and appendString -- to ensure the masks are
	extended as the values are added through ibis::table::row
	* src/mensa.cpp: change the behavior of ibis::mensa::addPartition
	to examine the global configuration entries when the input
	directory name is not a valid string

2009-04-15 John Wu <John.Wu at ACM.org>
	* configure.ac: change the handling of debug and xopt options to
	preserve the existing CXXFLAGS specified by the user.  change
	version number to 1.0.7
	* src/tafel:1207 move the line that clears col.mask into the
	if-block for nil pointers (in ibis::tafel::capacity).  Previously,
	the mask is cleared for no reason at all.

2009-04-14 John Wu <John.Wu at ACM.org>
	* src/tafel.cpp: in tafel::normalize add statement to make sure
	col.mask is of the correct size
	* src/tafel.h: remove const from the template tafel::append and
	function tafel::appendString, the const keyword is preventing the
	modified values being propergating back to the callers
	* src/qExpr.cpp:125 the right-hand side should be tm1 instead of
	tm2 (tm2 has been deleted in the previous line) -- a bug reported
	by Hank Childs and Prabhat